docker/sandbox-bundled/manifests/dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flyte
---
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubernetes-dashboard
    app.kubernetes.io/version: 2.7.0
    helm.sh/chart: kubernetes-dashboard-6.0.0
  name: flyte-sandbox-kubernetes-dashboard
  namespace: flyte
---
apiVersion: v1
automountServiceAccountToken: true
kind: ServiceAccount
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: minio
    helm.sh/chart: minio-12.1.1
  name: flyte-sandbox-minio
  namespace: flyte
secrets:
- name: flyte-sandbox-minio
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubernetes-dashboard
    app.kubernetes.io/version: 2.7.0
    helm.sh/chart: kubernetes-dashboard-6.0.0
  name: flyte-sandbox-kubernetes-dashboard
  namespace: flyte
rules:
- apiGroups:
  - ""
  resourceNames:
  - kubernetes-dashboard-key-holder
  - kubernetes-dashboard-certs
  - kubernetes-dashboard-csrf
  resources:
  - secrets
  verbs:
  - get
  - update
  - delete
- apiGroups:
  - ""
  resourceNames:
  - kubernetes-dashboard-settings
  resources:
  - configmaps
  verbs:
  - get
  - update
- apiGroups:
  - ""
  resourceNames:
  - heapster
  - dashboard-metrics-scraper
  resources:
  - services
  verbs:
  - proxy
- apiGroups:
  - ""
  resourceNames:
  - heapster
  - 'http:heapster:'
  - 'https:heapster:'
  - dashboard-metrics-scraper
  - http:dashboard-metrics-scraper
  resources:
  - services/proxy
  verbs:
  - get
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubernetes-dashboard
    app.kubernetes.io/version: 2.7.0
    helm.sh/chart: kubernetes-dashboard-6.0.0
  name: flyte-sandbox-kubernetes-dashboard-readonly
rules:
- apiGroups:
  - ""
  resources:
  - configmaps
  - endpoints
  - persistentvolumeclaims
  - pods
  - replicationcontrollers
  - replicationcontrollers/scale
  - serviceaccounts
  - services
  - nodes
  - persistentvolumeclaims
  - persistentvolumes
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - ""
  resources:
  - bindings
  - events
  - limitranges
  - namespaces/status
  - pods/log
  - pods/status
  - replicationcontrollers/status
  - resourcequotas
  - resourcequotas/status
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - ""
  resources:
  - namespaces
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - apps
  resources:
  - daemonsets
  - deployments
  - deployments/scale
  - replicasets
  - replicasets/scale
  - statefulsets
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - autoscaling
  resources:
  - horizontalpodautoscalers
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - batch
  resources:
  - cronjobs
  - jobs
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - extensions
  resources:
  - daemonsets
  - deployments
  - deployments/scale
  - ingresses
  - networkpolicies
  - replicasets
  - replicasets/scale
  - replicationcontrollers/scale
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - policy
  resources:
  - poddisruptionbudgets
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - networking.k8s.io
  resources:
  - networkpolicies
  - ingresses
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - storage.k8s.io
  resources:
  - storageclasses
  - volumeattachments
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - rbac.authorization.k8s.io
  resources:
  - clusterrolebindings
  - clusterroles
  - roles
  - rolebindings
  verbs:
  - get
  - list
  - watch
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubernetes-dashboard
    app.kubernetes.io/version: 2.7.0
    helm.sh/chart: kubernetes-dashboard-6.0.0
  name: flyte-sandbox-kubernetes-dashboard
  namespace: flyte
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: flyte-sandbox-kubernetes-dashboard
subjects:
- kind: ServiceAccount
  name: flyte-sandbox-kubernetes-dashboard
  namespace: flyte
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubernetes-dashboard
    app.kubernetes.io/version: 2.7.0
    helm.sh/chart: kubernetes-dashboard-6.0.0
  name: flyte-sandbox-kubernetes-dashboard-readonly
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: flyte-sandbox-kubernetes-dashboard-readonly
subjects:
- kind: ServiceAccount
  name: flyte-sandbox-kubernetes-dashboard
  namespace: flyte
---
apiVersion: v1
data:
  config.yml: |-
    health:
      storagedriver:
        enabled: true
        interval: 10s
        threshold: 3
    http:
      addr: :5000
      debug:
        addr: :5001
        prometheus:
          enabled: false
          path: /metrics
      headers:
        X-Content-Type-Options:
        - nosniff
    log:
      fields:
        service: registry
    storage:
      cache:
        blobdescriptor: inmemory
    version: 0.1
kind: ConfigMap
metadata:
  labels:
    app: docker-registry
    chart: docker-registry-2.2.2
    heritage: Helm
    release: flyte-sandbox
  name: flyte-sandbox-docker-registry-config
  namespace: flyte
---
apiVersion: v1
data:
  envoy.yaml: |
    admin:
        access_log_path: /dev/stdout
    static_resources:
        listeners:
            - address:
                  socket_address:
                      address: 0.0.0.0
                      port_value: 8000
              filter_chains:
                  - filters:
                        - name: envoy.filters.network.http_connection_manager
                          typed_config:
                              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                              stat_prefix: ingress_http
                              codec_type: AUTO
                              upgrade_configs:
                                  - upgrade_type: websocket
                              route_config:
                                  name: local_route
                                  virtual_hosts:
                                      - name: backend
                                        domains:
                                            - "*"
                                        routes:
                                            - match:
                                                  path: "/"
                                              redirect:
                                                  path_redirect: "/console/"
                                            - match:
                                                  prefix: "/.well-known"
                                              route:
                                                  cluster: flyte
                                            - match:
                                                  prefix: "/__webpack_hmr"
                                              route:
                                                  cluster: flyte
                                            - match:
                                                  prefix: "/api"
                                              route:
                                                  cluster: flyte
                                            - match:
                                                  prefix: "/callback"
                                              route:
                                                  cluster: flyte
                                            - match:
                                                  prefix: "/config"
                                              route:
                                                  cluster: flyte
                                            - match:
                                                  prefix: "/console"
                                              route:
                                                  cluster: flyte
                                            - match:
                                                  prefix: "/healthcheck"
                                              route:
                                                  cluster: flyte
                                            - match:
                                                  prefix: "/login"
                                              route:
                                                  cluster: flyte
                                            - match:
                                                  prefix: "/logout"
                                              route:
                                                  cluster: flyte
                                            - match:
                                                  prefix: "/me"
                                              route:
                                                  cluster: flyte
                                            - match:
                                                  prefix: "/oauth2"
                                              route:
                                                  cluster: flyte
                                            - match:
                                                  prefix: "/v1"
                                              route:
                                                  cluster: flyte
                                            - match:
                                                  prefix: "/flyteidl.service.AdminService"
                                              route:
                                                  cluster: flyte_grpc
                                            - match:
                                                  prefix: "/flyteidl.service.AuthMetadataService"
                                              route:
                                                  cluster: flyte_grpc
                                            - match:
                                                  prefix: "/flyteidl.service.DataProxyService"
                                              route:
                                                  cluster: flyte_grpc
                                            - match:
                                                  prefix: "/flyteidl.service.IdentityService"
                                              route:
                                                  cluster: flyte_grpc
                                            - match:
                                                  prefix: "/grpc.health.v1.Health"
                                              route:
                                                  cluster: flyte_grpc
                                            - match:
                                                  prefix: "/flyteidl.service.SignalService"
                                              route:
                                                  cluster: flyte_grpc
                                            - match:
                                                  path: "/kubernetes-dashboard"
                                              redirect:
                                                  path_redirect: "/kubernetes-dashboard/"
                                            - match:
                                                  prefix: "/kubernetes-dashboard/"
                                              route:
                                                  cluster: kubernetes-dashboard
                                                  prefix_rewrite: /
                                            - match:
                                                  path: "/minio"
                                              redirect:
                                                  path_redirect: "/minio/"
                                            - match:
                                                  prefix: "/minio/"
                                              route:
                                                  cluster: minio
                                                  prefix_rewrite: /
                              http_filters:
                                  - name: envoy.filters.http.router
                                    typed_config:
                                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        clusters:
            - name: flyte
              connect_timeout: 0.25s
              type: STRICT_DNS
              lb_policy: ROUND_ROBIN
              load_assignment:
                  cluster_name: flyte
                  endpoints:
                      - lb_endpoints:
                            - endpoint:
                                  address:
                                      socket_address:
                                          address: flyte-sandbox-local
                                          port_value: 8088
            - name: flyte_grpc
              connect_timeout: 0.25s
              type: STRICT_DNS
              lb_policy: ROUND_ROBIN
              http2_protocol_options: {}
              load_assignment:
                  cluster_name: flyte_grpc
                  endpoints:
                      - lb_endpoints:
                            - endpoint:
                                  address:
                                      socket_address:
                                          address: flyte-sandbox-local
                                          port_value: 8089
            - name: kubernetes-dashboard
              connect_timeout: 0.25s
              type: STRICT_DNS
              lb_policy: ROUND_ROBIN
              load_assignment:
                  cluster_name: kubernetes-dashboard
                  endpoints:
                      - lb_endpoints:
                            - endpoint:
                                  address:
                                      socket_address:
                                          address: flyte-sandbox-kubernetes-dashboard
                                          port_value: 80
            - name: minio
              connect_timeout: 0.25s
              type: STRICT_DNS
              lb_policy: ROUND_ROBIN
              load_assignment:
                  cluster_name: minio
                  endpoints:
                      - lb_endpoints:
                            - endpoint:
                                  address:
                                      socket_address:
                                          address: flyte-sandbox-minio
                                          port_value: 9001
kind: ConfigMap
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: flyte-sandbox
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: flyte-sandbox-0.1.0
  name: flyte-sandbox-proxy-config
  namespace: flyte
---
apiVersion: v1
data: null
kind: ConfigMap
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubernetes-dashboard
    app.kubernetes.io/version: 2.7.0
    helm.sh/chart: kubernetes-dashboard-6.0.0
  name: kubernetes-dashboard-settings
  namespace: flyte
---
apiVersion: v1
data:
  haSharedSecret: bkdGS01GbnhubGJkMmZDZA==
  proxyPassword: ""
  proxyUsername: ""
kind: Secret
metadata:
  labels:
    app: docker-registry
    chart: docker-registry-2.2.2
    heritage: Helm
    release: flyte-sandbox
  name: flyte-sandbox-docker-registry-secret
  namespace: flyte
type: Opaque
---
apiVersion: v1
kind: Secret
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubernetes-dashboard
    app.kubernetes.io/version: 2.7.0
    helm.sh/chart: kubernetes-dashboard-6.0.0
  name: flyte-sandbox-kubernetes-dashboard-certs
  namespace: flyte
type: Opaque
---
apiVersion: v1
data:
  root-password: bWluaW9zdG9yYWdl
  root-user: bWluaW8=
kind: Secret
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: minio
    helm.sh/chart: minio-12.1.1
  name: flyte-sandbox-minio
  namespace: flyte
type: Opaque
---
apiVersion: v1
data:
  postgres-password: cG9zdGdyZXM=
kind: Secret
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.1.9
  name: flyte-sandbox-postgresql
  namespace: flyte
type: Opaque
---
apiVersion: v1
kind: Secret
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubernetes-dashboard
    app.kubernetes.io/version: 2.7.0
    helm.sh/chart: kubernetes-dashboard-6.0.0
  name: kubernetes-dashboard-csrf
  namespace: flyte
type: Opaque
---
apiVersion: v1
kind: Secret
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubernetes-dashboard
    app.kubernetes.io/version: 2.7.0
    helm.sh/chart: kubernetes-dashboard-6.0.0
  name: kubernetes-dashboard-key-holder
  namespace: flyte
type: Opaque
---
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: flyte-sandbox
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: flyte-sandbox-0.1.0
  name: flyte-sandbox-local
  namespace: flyte
subsets:
- addresses:
  - ip: '%{HOST_GATEWAY_IP}%'
  ports:
  - name: http
    port: 8088
    protocol: TCP
  - name: grpc
    port: 8089
    protocol: TCP
  - name: webhook
    port: 9443
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: docker-registry
    chart: docker-registry-2.2.2
    heritage: Helm
    release: flyte-sandbox
  name: flyte-sandbox-docker-registry
  namespace: flyte
spec:
  ports:
  - name: http-5000
    nodePort: 30000
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: docker-registry
    release: flyte-sandbox
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: kubernetes-dashboard
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubernetes-dashboard
    app.kubernetes.io/version: 2.7.0
    helm.sh/chart: kubernetes-dashboard-6.0.0
    kubernetes.io/cluster-service: "true"
  name: flyte-sandbox-kubernetes-dashboard
  namespace: flyte
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app.kubernetes.io/component: kubernetes-dashboard
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/name: kubernetes-dashboard
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: flyte-sandbox
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: flyte-sandbox-0.1.0
  name: flyte-sandbox-local
  namespace: flyte
spec:
  clusterIP: None
  ports:
  - name: http
    port: 8088
    protocol: TCP
  - name: grpc
    port: 8089
    protocol: TCP
  - name: webhook
    port: 9443
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: minio
    helm.sh/chart: minio-12.1.1
  name: flyte-sandbox-minio
  namespace: flyte
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: minio-api
    nodePort: 30002
    port: 9000
    targetPort: minio-api
  - name: minio-console
    port: 9001
    targetPort: minio-console
  selector:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/name: minio
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.1.9
  name: flyte-sandbox-postgresql
  namespace: flyte
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: tcp-postgresql
    nodePort: 30001
    port: 5432
    targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/name: postgresql
  sessionAffinity: None
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.1.9
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: flyte-sandbox-postgresql-hl
  namespace: flyte
spec:
  clusterIP: None
  ports:
  - name: tcp-postgresql
    port: 5432
    targetPort: tcp-postgresql
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/name: postgresql
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: flyte-sandbox
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: flyte-sandbox-0.1.0
  name: flyte-sandbox-proxy
  namespace: flyte
spec:
  ports:
  - name: http
    nodePort: 30080
    port: 8000
    protocol: TCP
  selector:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/name: flyte-sandbox
  type: NodePort
---
apiVersion: v1
kind: PersistentVolume
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: flyte-sandbox
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: flyte-sandbox-0.1.0
  name: flyte-sandbox-db-storage
  namespace: flyte
spec:
  accessModes:
  - ReadWriteOnce
  capacity:
    storage: 1Gi
  hostPath:
    path: /var/lib/flyte/storage/db
  storageClassName: manual
---
apiVersion: v1
kind: PersistentVolume
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: flyte-sandbox
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: flyte-sandbox-0.1.0
  name: flyte-sandbox-minio-storage
  namespace: flyte
spec:
  accessModes:
  - ReadWriteOnce
  capacity:
    storage: 1Gi
  hostPath:
    path: /var/lib/flyte/storage/minio
  storageClassName: manual
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: flyte-sandbox
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: flyte-sandbox-0.1.0
  name: flyte-sandbox-db-storage
  namespace: flyte
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
  storageClassName: manual
  volumeName: flyte-sandbox-db-storage
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: flyte-sandbox
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: flyte-sandbox-0.1.0
  name: flyte-sandbox-minio-storage
  namespace: flyte
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
  storageClassName: manual
  volumeName: flyte-sandbox-minio-storage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: flyte-sandbox
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: flyte-sandbox-0.1.0
  name: flyte-sandbox-buildkit
  namespace: flyte
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: buildkit
      app.kubernetes.io/instance: flyte-sandbox
      app.kubernetes.io/name: flyte-sandbox
  template:
    metadata:
      labels:
        app.kubernetes.io/component: buildkit
        app.kubernetes.io/instance: flyte-sandbox
        app.kubernetes.io/name: flyte-sandbox
    spec:
      containers:
      - args:
        - --addr
        - unix:///run/buildkit/buildkitd.sock
        - --addr
        - tcp://0.0.0.0:30003
        image: moby/buildkit:sandbox
        imagePullPolicy: Never
        livenessProbe:
          exec:
            command:
            - buildctl
            - debug
            - workers
          initialDelaySeconds: 5
          periodSeconds: 30
        name: buildkit
        ports:
        - containerPort: 30003
          name: tcp
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - buildctl
            - debug
            - workers
          initialDelaySeconds: 5
          periodSeconds: 30
        securityContext:
          privileged: true
      hostNetwork: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: docker-registry
    chart: docker-registry-2.2.2
    heritage: Helm
    release: flyte-sandbox
  name: flyte-sandbox-docker-registry
  namespace: flyte
spec:
  minReadySeconds: 5
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
      release: flyte-sandbox
  template:
    metadata:
      annotations:
        checksum/config: 8f50e768255a87f078ba8b9879a0c174c3e045ffb46ac8723d2eedbe293c8d81
        checksum/secret: ed947b2dcb88a34ee0ca30df98b40e5f0782da4ae72f82db479f9a498abd8255
      labels:
        app: docker-registry
        release: flyte-sandbox
    spec:
      containers:
      - command:
        - /bin/registry
        - serve
        - /etc/docker/registry/config.yml
        env:
        - name: REGISTRY_HTTP_SECRET
          valueFrom:
            secretKeyRef:
              key: haSharedSecret
              name: flyte-sandbox-docker-registry-secret
        - name: REGISTRY_STORAGE_FILESYSTEM_ROOTDIRECTORY
          value: /var/lib/registry
        image: registry:sandbox
        imagePullPolicy: Never
        livenessProbe:
          httpGet:
            path: /
            port: 5000
        name: docker-registry
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /
            port: 5000
        resources: {}
        volumeMounts:
        - mountPath: /etc/docker/registry
          name: flyte-sandbox-docker-registry-config
        - mountPath: /var/lib/registry/
          name: data
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      volumes:
      - configMap:
          name: flyte-sandbox-docker-registry-config
        name: flyte-sandbox-docker-registry-config
      - emptyDir: {}
        name: data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: kubernetes-dashboard
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubernetes-dashboard
    app.kubernetes.io/version: 2.7.0
    helm.sh/chart: kubernetes-dashboard-6.0.0
  name: flyte-sandbox-kubernetes-dashboard
  namespace: flyte
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: kubernetes-dashboard
      app.kubernetes.io/instance: flyte-sandbox
      app.kubernetes.io/name: kubernetes-dashboard
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations: null
      labels:
        app.kubernetes.io/component: kubernetes-dashboard
        app.kubernetes.io/instance: flyte-sandbox
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: kubernetes-dashboard
        app.kubernetes.io/version: 2.7.0
        helm.sh/chart: kubernetes-dashboard-6.0.0
    spec:
      containers:
      - args:
        - --namespace=flyte
        - --metrics-provider=none
        - --enable-insecure-login
        - --enable-skip-login
        image: kubernetesui/dashboard:sandbox
        imagePullPolicy: Never
        livenessProbe:
          httpGet:
            path: /
            port: 9090
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 30
        name: kubernetes-dashboard
        ports:
        - containerPort: 9090
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 2
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsGroup: 2001
          runAsUser: 1001
        volumeMounts:
        - mountPath: /certs
          name: kubernetes-dashboard-certs
        - mountPath: /tmp
          name: tmp-volume
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: flyte-sandbox-kubernetes-dashboard
      volumes:
      - name: kubernetes-dashboard-certs
        secret:
          secretName: flyte-sandbox-kubernetes-dashboard-certs
      - emptyDir: {}
        name: tmp-volume
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: minio
    helm.sh/chart: minio-12.1.1
  name: flyte-sandbox-minio
  namespace: flyte
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: flyte-sandbox
      app.kubernetes.io/name: minio
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/credentials-secret: c199ac45f9d95d97966921c814d6c8b38cbf7416458e19cbe6d001a04c264448
      labels:
        app.kubernetes.io/instance: flyte-sandbox
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: minio
        helm.sh/chart: minio-12.1.1
    spec:
      affinity:
        nodeAffinity: null
        podAffinity: null
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/instance: flyte-sandbox
                  app.kubernetes.io/name: minio
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - env:
        - name: BITNAMI_DEBUG
          value: "false"
        - name: MINIO_SCHEME
          value: http
        - name: MINIO_FORCE_NEW_KEYS
          value: "no"
        - name: MINIO_ROOT_USER
          valueFrom:
            secretKeyRef:
              key: root-user
              name: flyte-sandbox-minio
        - name: MINIO_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              key: root-password
              name: flyte-sandbox-minio
        - name: MINIO_DEFAULT_BUCKETS
          value: my-s3-bucket
        - name: MINIO_BROWSER
          value: "on"
        - name: MINIO_PROMETHEUS_AUTH_TYPE
          value: public
        - name: MINIO_CONSOLE_PORT_NUMBER
          value: "9001"
        - name: MINIO_BROWSER_REDIRECT_URL
          value: http://localhost:30080/minio
        envFrom: null
        image: docker.io/bitnami/minio:sandbox
        imagePullPolicy: Never
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /minio/health/live
            port: minio-api
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
        name: minio
        ports:
        - containerPort: 9000
          name: minio-api
          protocol: TCP
        - containerPort: 9001
          name: minio-console
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: minio-api
          timeoutSeconds: 1
        resources:
          limits: {}
          requests: {}
        securityContext:
          runAsNonRoot: true
          runAsUser: 1001
        volumeMounts:
        - mountPath: /data
          name: data
      initContainers:
      - command:
        - /bin/bash
        - -ec
        - |
          chown -R 1001:1001 /data
        image: docker.io/bitnami/bitnami-shell:sandbox
        imagePullPolicy: Never
        name: volume-permissions
        resources:
          limits: {}
          requests: {}
        securityContext:
          runAsUser: 0
        volumeMounts:
        - mountPath: /data
          name: data
      securityContext:
        fsGroup: 1001
      serviceAccountName: flyte-sandbox-minio
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: flyte-sandbox-minio-storage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: flyte-sandbox
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: flyte-sandbox-0.1.0
  name: flyte-sandbox-proxy
  namespace: flyte
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: proxy
      app.kubernetes.io/instance: flyte-sandbox
      app.kubernetes.io/name: flyte-sandbox
  template:
    metadata:
      labels:
        app.kubernetes.io/component: proxy
        app.kubernetes.io/instance: flyte-sandbox
        app.kubernetes.io/name: flyte-sandbox
    spec:
      containers:
      - image: envoyproxy/envoy:sandbox
        imagePullPolicy: Never
        name: proxy
        ports:
        - containerPort: 8000
          name: http
        volumeMounts:
        - mountPath: /etc/envoy
          name: config
      volumes:
      - configMap:
          name: flyte-sandbox-proxy-config
        name: config
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: flyte-sandbox
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.1.9
  name: flyte-sandbox-postgresql
  namespace: flyte
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: primary
      app.kubernetes.io/instance: flyte-sandbox
      app.kubernetes.io/name: postgresql
  serviceName: flyte-sandbox-postgresql-hl
  template:
    metadata:
      annotations: null
      labels:
        app.kubernetes.io/component: primary
        app.kubernetes.io/instance: flyte-sandbox
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: postgresql
        helm.sh/chart: postgresql-12.1.9
      name: flyte-sandbox-postgresql
    spec:
      affinity:
        nodeAffinity: null
        podAffinity: null
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: primary
                  app.kubernetes.io/instance: flyte-sandbox
                  app.kubernetes.io/name: postgresql
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - env:
        - name: BITNAMI_DEBUG
          value: "false"
        - name: POSTGRESQL_PORT_NUMBER
          value: "5432"
        - name: POSTGRESQL_VOLUME_DIR
          value: /bitnami/postgresql
        - name: PGDATA
          value: /bitnami/postgresql/data
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              key: postgres-password
              name: flyte-sandbox-postgresql
        - name: POSTGRESQL_ENABLE_LDAP
          value: "no"
        - name: POSTGRESQL_ENABLE_TLS
          value: "no"
        - name: POSTGRESQL_LOG_HOSTNAME
          value: "false"
        - name: POSTGRESQL_LOG_CONNECTIONS
          value: "false"
        - name: POSTGRESQL_LOG_DISCONNECTIONS
          value: "false"
        - name: POSTGRESQL_PGAUDIT_LOG_CATALOG
          value: "off"
        - name: POSTGRESQL_CLIENT_MIN_MESSAGES
          value: error
        - name: POSTGRESQL_SHARED_PRELOAD_LIBRARIES
          value: pgaudit
        image: docker.io/bitnami/postgresql:sandbox
        imagePullPolicy: Never
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
          failureThreshold: 6
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: postgresql
        ports:
        - containerPort: 5432
          name: tcp-postgresql
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - -e
            - |
              exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
              [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          failureThreshold: 6
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits: {}
          requests:
            cpu: 250m
            memory: 256Mi
        securityContext:
          runAsUser: 1001
        volumeMounts:
        - mountPath: /bitnami/postgresql
          name: data
      hostIPC: false
      hostNetwork: false
      initContainers:
      - command:
        - /bin/sh
        - -ec
        - |
          chown 1001:1001 /bitnami/postgresql
          mkdir -p /bitnami/postgresql/data
          chmod 700 /bitnami/postgresql/data
          find /bitnami/postgresql -mindepth 1 -maxdepth 1 -not -name "conf" -not -name ".snapshot" -not -name "lost+found" | \
            xargs -r chown -R 1001:1001
        image: docker.io/bitnami/bitnami-shell:sandbox
        imagePullPolicy: Never
        name: init-chmod-data
        resources:
          limits: {}
          requests: {}
        securityContext:
          runAsUser: 0
        volumeMounts:
        - mountPath: /bitnami/postgresql
          name: data
      securityContext:
        fsGroup: 1001
      serviceAccountName: default
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: flyte-sandbox-db-storage
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
